# sophon-agent

./: .env.example  .gitignore  README.md  conf.yaml  conf.yaml.example  pyproject.toml  server.py
src/agent/: configuration.py  graph.py  prompts.py  state.py  tools_and_schemas.py
src/server/: app.py  chat_request.py
src/utils/: __init__.py  model_config_loader.py
tests/utils/: test_model_config_loader.py
web/: package-lock.json  package.json  tailwind.config.js
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatInterface.tsx  DetailPanel.tsx  WorkflowGraph.tsx  image.tsx  markdown.tsx  tooltip.tsx
web/src/components/contexts/: ChatContext.tsx
web/src/types/: chat.ts
web/src/utils/: messageProcessor.ts
