[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophon-agent"
version = "0.1.0"
description = "A Python project with LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.12.10"
authors = [
    {name = "jiaojiao", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3.24",
    "langgraph>=0.4.7",
    "langchain_community>=0.3.24",
    "langchain-openai>=0.3.18",
    "fastapi>=0.100.0",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "langchain_mcp_adapters>=0.1.1",
    "matplotlib>=3.10.3",
    "google-genai",
    "tavily-python>=0.3.0",
    "duckduckgo-search>=3.9.0",
    "arxiv>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true